objects/ssot__CustodyItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CollectionDateTime__c</fullName>
        <label>Collection Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CustodyItemCategory__c</fullName>
        <label>Custody Item Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustodyItemStatus__c</fullName>
        <label>Custody Item Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustodyItemUsageType__c</fullName>
        <label>Custody Item Usage Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalIdentifier__c</fullName>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Custody Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectId__c</fullName>
        <label>Subject</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectObject__c</fullName>
        <label>Subject Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658752122_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustodyItem_SubjectId_map_CareProgra_rel</label>
        <referenceTo>ssot__CareProgramEnrollee__dlm</referenceTo>
        <relationshipLabel>CustodyItem_SubjectId_map_CareProgra_rel</relationshipLabel>
        <relationshipName>rel_1731658752122_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>